# mockbook

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  onCreateCommand.sh
.github/: dependabot.yaml
.github/workflows/: ci.yaml  publish.yaml
docs/: demo.webm
examples/docker-compose/: README.md  docker-compose.yaml
examples/docker-compose/nginx-conf/: default.conf
examples/docker-compose/notebooks/: default.ipynb
examples/pytest-testcontainers/: README.md  pyproject.toml
examples/pytest-testcontainers/notebooks/: mock.ipynb
examples/pytest-testcontainers/test/: conftest.py  test_example.py
jupyterlab/: config.py
mockbook/: loader.py  main.py
mockbook/nginx/: main.conf
mockbook/nginx/conf.d/: default.conf
mockbook/notebooks/: default.ipynb
nginx/: nginx.conf
scripts/: run-jupyterlab.sh  run-mockbook.sh  run-nginx-autoreloader.sh  run-nginx.sh  run_nginx.sh
supervisord/: supervisord.conf
supervisord/conf.d/: jupyterlab.conf  mockbook.conf  nginx-reloader.conf  nginx.conf
test/: docker-compose.yaml  full.bats  mockbook_alone.bats  nginx_non_80_port.bats  test.bats
