[project]
name = "mockbook"
version = "0.2.0"
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "nbformat~=5.10.4",
    "fastapi[standard]~=0.115.4",
    "jupyterlab~=4.3.0",
    "faker~=33.1.0",
    "factory-boy~=3.3.1",
]

[project.optional-dependencies]
dev = ["mypy~=1.14.1", "ruff~=0.7.2"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN401", "S311"]

[tool.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
exclude = ['^\.venv/*', '^test/.*']
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_reexport = false
explicit_package_bases = true
