[project]
name = "mockbook"
version = "0.4.0"
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "nbformat~=5.10.4",
    "fastapi[standard]~=0.115.4",
    "jupyterlab~=4.3.0",
    "faker~=36.2.2",
    "factory-boy~=3.3.1",
]

[project.optional-dependencies]
dev = ["mypy~=1.15.0", "ruff~=0.9.9"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN401", "S311"]

[tool.ruff.lint.per-file-ignores]
"jupyterlab/config.py" = ["ALL"]

[tool.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
exclude = ['^\.venv/*', '^test/.*', '^jupyterlab/.*']
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_reexport = false
explicit_package_bases = true
