[project]
name = "mockbook"
version = "0.6.0"
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "nbformat~=5.10.4",
    "fastapi[standard]~=0.115.4",
    "jupyterlab~=4.4.1",
    "faker~=37.5.3",
    "factory-boy~=3.3.1",
]

[dependency-groups]
dev = ["mypy~=1.16.0", "ruff~=0.12.1", "types-requests>=2.32.0.20250328"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN401", "S311"]

[tool.ruff.lint.per-file-ignores]
"jupyterlab/config.py" = ["ALL"]
"test/{bats,test_helper}/*" = ["ALL"]
"examples/*/test/*" = ["S101"]

[tool.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
exclude = ['^\.venv/*', '^test/.*', '^jupyterlab/.*', '^examples/.*']
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_reexport = false
explicit_package_bases = true
